--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,6 +17,12 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation 'io.javalin:javalin:4.3.0'
+
+
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
 }
 
 application {
