--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
-
+    implementation 'com.moowork.gradle:gradle-node-plugin:1.2.0'
     implementation 'io.javalin:javalin:4.3.0'
 
 
