--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation 'org.openjfx:javafx-swing:17.0.2'
 
     implementation 'org.openjfx:javafx:19-ea+3'
+
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+
+
 }
 
 application {
