--- a/client/build.gradle
+++ b/client/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     implementation('org.controlsfx:controlsfx:11.1.0')
+
+    // Used for json conversions
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 javafx {
