--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'org.openjfx:javafx-swing:17.0.2'
 
     implementation 'org.openjfx:javafx:19-ea+3'
-
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
     implementation 'org.hibernate:hibernate-core:5.6.1.Final'
     implementation 'com.github.gwenn:sqlite-dialect:0.1.0'
