--- a/server/build.gradle
+++ b/server/build.gradle
@@ -33,11 +33,10 @@ dependencies {
 
     implementation 'org.openjfx:javafx:19-ea+3'
 
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
-    implementation 'org.hibernate:hibernate-core:5.6.1.Final'
-    implementation 'com.github.gwenn:sqlite-dialect:0.1.0'
 
-
+    implementation 'javax.persistence:persistence-api:1.0-rev-1'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.hibernate:hibernate-core:5.6.7.Final'
 }
 
 application {
