fixed json issues for sending alpha.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,11 @@ out/
 *.iws
 
 ##############################
+## files
+##############################
+server/mydb.db
+
+##############################
 ## Eclipse
 ##############################
 .settings/
