--- a/server/build.gradle
+++ b/server/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:5.6.1.Final'
     implementation 'com.github.gwenn:sqlite-dialect:0.1.0'
 
-
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
 }
 
 application {
