--- a/.github/workflows/push_ecr.yml
+++ b/.github/workflows/push_ecr.yml
@@ -19,7 +19,7 @@ jobs:
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
           
       - name: Gradle Build
-        run: ./gradlew package
+        run: gradle build
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
