--- a/.github/workflows/push_ecr.yml
+++ b/.github/workflows/push_ecr.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        uses: gradle/wrapper-validation-action@v1
           
       - name: Gradle Build
         run: gradlew package
