--- a/.github/workflows/push_ecr.yml
+++ b/.github/workflows/push_ecr.yml
@@ -19,7 +19,7 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
           
       - name: Gradle Build
-        run: gradlew package
+        run: ./gradlew package
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
