--- a/.github/workflows/push_ecr.yml
+++ b/.github/workflows/push_ecr.yml
@@ -17,7 +17,8 @@ jobs:
           distribution: 'adopt'
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
-          
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Gradle Build
         run: ./gradlew package
       - name: Configure AWS Credentials
