Added practice creator save

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
 javafx {
     version = "17"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing', 'javafx.base' ]
 }
 
 application {
