adding tests for server module (except app)

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -51,6 +51,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    implementation 'org.mockito:mockito-core:4.4.0'
+
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
 }
 
 application {
