--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,4 +21,20 @@ jobs:
         with:
           name: Package
           path: build/distributions
+  dev-build:
+    if: ${{ github.ref == 'refs/heads/develop' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+      - name: Gradle Build
+        run: ./gradlew build
           
